# fucking-venv

./: README.md  fuckingvenv.py  install.ps1  install.sh  pyproject.toml
